kube/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: admin
    database: postgres
  name: admin
  namespace: pandora
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f pandora.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/swarm-default: "true"
        io.kompose.service: admin
    spec:
      containers:
        - image: acrprodpandora.azurecr.io/acrprodpandora/admin:latest
          imagePullPolicy: Always
          name: admin
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 8104
              hostPort: 8104
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /login
              port: 8104
              httpHeaders:
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /login
              port: 8104
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "50000m"
      restartPolicy: Always
status: {}
