kube/pandora-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: pandora
    database: postgres
  name: pandora
  namespace: pandora
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pandora
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f pandora.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/swarm-default: "true"
        io.kompose.service: pandora
    spec:
      volumes:
      - name: secret-api
        secret:
          secretName: api
      containers:
        - env:
            - name: PANDORA_ENV
              value: azure
          image: tempacrpandora.azurecr.io/tempacrpandora/api:latest
          volumeMounts:
          - name: secret-api
            readOnly: true
            mountPath: "/home/spring/config"
          imagePullPolicy: Always
          name: pandora
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 8102
              hostPort: 8102
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8102
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 8102
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "50000m"
      restartPolicy: Always
status: {}
