kube/signaling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: signaling
  name: signaling
  namespace: pandora
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: signaling
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f pandora.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/swarm-default: "true"
        io.kompose.service: signaling
    spec:
      containers:
        - image: acrprodpandora.azurecr.io/acrprodpandora/signaling:latest
          name: signaling
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 5000
              hostPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 5000
              httpHeaders:
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "16Gi"
              cpu: "40000m"
      restartPolicy: Always
status: {}
