kube/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: pandora
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f pandora.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/swarm-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - image: acrprodpandora.azurecr.io/acrprodpandora/pandora:web
          name: web
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 8101
              hostPort: 8101
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8101
              httpHeaders:
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8101
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "4Gi"
              cpu: "10000m"
      restartPolicy: Always
status: {}
