kube/pandora-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: pandora
  name: pandora
  namespace: pandora
spec:
  ports:
    - name: "8102"
      port: 8102
      targetPort: 8102
  selector:
    io.kompose.service: pandora
status:
  loadBalancer: {}
