kube/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: payment
  name: payment
  namespace: pandora
spec:
  ports:
    - name: "8105"
      port: 8105
      targetPort: 8105
  selector:
    io.kompose.service: payment
status:
  loadBalancer: {}
