kube/signal-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: signal
  name: signal
  namespace: default
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8080
  selector:
    io.kompose.service: signal
status:
  loadBalancer: {}
