kube/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: pandora
spec:
  ports:
    - name: "8101"
      port: 8101
      targetPort: 8101
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
