kube/wipe-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f pandora.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: wipe
  name: wipe
  namespace: default
spec:
  ports:
    - name: "8103"
      port: 8103
      targetPort: 80
  selector:
    io.kompose.service: wipe
status:
  loadBalancer: {}
