kube/redis-service-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-to-signal
spec:
  podSelector:
    matchLabels:
      io.kompose.service: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.service: signal
